# docs/swagger.yaml
@@ -146,6 +146,46 @@ paths:
       summary: Thêm phim mới
       tags:
       - film
+  /admin/delete-film/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Chỉ admin mới có quyền thêm phim mới vào hệ thống
+      parameters:
+      - description: Token (Bearer {token})
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Film ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Film'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      security:
+      - BearerAuth: []
+      summary: delete a film
+      tags:
+      - film
   /film/{id}:
     get:
       consumes:
@@ -163,7 +203,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Film'
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.Film'
+              type: object
         "400":
           description: Bad Request
           schema:
